fontawesome added + custom checkbox color change

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;600;700;800&display=swap');
     </style>
+    <script src="https://use.fontawesome.com/594ca9152a.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Dotphoto - Signup</title>
 </head>
@@ -112,7 +113,7 @@
                     <!-- checkbox -->
                     <div class="col-12">
                         <div class="check-terms">
-                            <div class="custom-control custom-checkbox custom-control-inline">
+                            <div class="custom-control  checkbox checkbox-info">
                                 <input type="checkbox" class="custom-control-input" name="yes" value="yes" id="yes">
                                 <label class="custom-control-label" for="yes">I agree to the <a href="#">Terms &
                                         conditions</a></label>
