--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <!-- sign up form -->
-            <form action="#">
+            <form action="#" id="signUpForm">
                 <div class="row">
                     <div class="col-sm-6">
                         <!-- single input  -->
@@ -126,7 +126,7 @@
                             <button type="submit">Join Now</button>
                         </div>
                         <div class="text-and-link">
-                            <p>Already member? <a href="#">Sign in</a></p>
+                            <p>Already member? <a href="login.html">Sign in</a></p>
                         </div>
                     </div>
                 </div>
